<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/loginOuterLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="a240.familymap.Fragments.Login">
    <!--android:background="@color/backgroundPrimary"-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="85dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/serverHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serverHostLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/serverHostInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/textPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/serverPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serverPortLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/serverPortInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="number"
                android:textColor="@color/textPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userNameLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/userNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textNoSuggestions"
                android:textColor="@color/textPrimary"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPassword"
                android:textColor="@color/textPrimary"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstNameLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName"
                android:textColor="@color/textPrimary"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastNameLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName"/>
            <!--android:textColor="@color/textPrimary"-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textEmailAddress"
                android:textColor="@color/textPrimary"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderLabel"/>
            <!--android:textColor="@color/textPrimary"-->

            <RadioGroup
                android:id="@+id/genderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/maleRadioButtonLabel"/>
                <!--android:textColor="@color/textPrimary"-->

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/femaleRadioButtonLabel"/>
                <!--android:textColor="@color/textPrimary"-->
            </RadioGroup>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signInButtonText"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registerButtonText"/>
    </LinearLayout>

</FrameLayout>